# theora

./: .gitignore  CMakeLists.txt
examples/: dump_psnr.c  dump_video.c  encoder_example.c  getopt.c  getopt.h  getopt1.c  libtheora_info.c  player_example.c  png2theora.c  splayer.c  tiff2theora.c
include/theora/: codec.h  theora.h  theoradec.h  theoraenc.h
lib/: analyze.c  apiwrapper.c  apiwrapper.h  bitpack.c  bitpack.h  collect.c  collect.h  dct.h  decapiwrapper.c  decinfo.c  decint.h  decode.c  dequant.c  dequant.h  encapiwrapper.c  encfrag.c  encinfo.c  encint.h  encode.c  encoder_disabled.c  enquant.c  enquant.h  fdct.c  fragment.c  huffdec.c  huffdec.h  huffenc.c  huffenc.h  huffman.h  idct.c  info.c  internal.c  internal.h  mathops.c  mathops.h  mcenc.c  modedec.h  ocintrin.h  quant.c  quant.h  (+4 more)
lib/arm/: armbits.h  armcpu.c  armcpu.h  armenc.c  armenc.h  armint.h  armstate.c
lib/c64x/: c64xdec.c  c64xdec.h  c64xfrag.c  c64xidct.c  c64xint.h  c64xstate.c
lib/x86/: mmxencfrag.c  mmxfdct.c  mmxfrag.c  mmxidct.c  mmxloop.h  mmxstate.c  sse2encfrag.c  sse2fdct.c  sse2idct.c  sse2trans.h  x86cpu.c  x86cpu.h  x86enc.c  x86enc.h  x86enquant.c  x86int.h  x86state.c  x86zigzag.h
lib/x86_vc/: mmxencfrag.c  mmxfdct.c  mmxfrag.c  mmxidct.c  mmxloop.h  mmxstate.c  x86cpu.c  x86cpu.h  x86enc.c  x86enc.h  x86int.h  x86state.c  x86zigzag.h
